fixed smiley faces on portrait (z-index)

--- a/site/CSS/pidiv.css
+++ b/site/CSS/pidiv.css
@@ -46,6 +46,7 @@
 .SmileyFace {
     height: 45px;
     position: absolute;
+    z-index: -1;
 }
 
 
